# DermaTrace

./: .gitignore  DERMATRACE_DEBUG_LOG.md  DERMATRACE_PERFORMANCE.md  errors.logs  package-lock.json  package.json
.github/workflows/: backend.yml
.kiro/specs/dermatrace/: .config.kiro  design.md  requirements.md  tasks.md
backend/: .env.example  Dockerfile  README.md  alembic.ini  gunicorn.conf.py  pyproject.toml  railway.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_performance_indexes.py
backend/app/: cache.py  config.py  database.py  dependencies.py  main.py
backend/app/models/: __init__.py  product.py  profile.py  reaction.py  transaction.py  trigger_result.py  user.py
backend/app/routers/: analysis.py  auth.py  dashboard.py  ingredients.py  payments.py  products.py  profile.py  reactions.py  recommendations.py  subscription.py  sync.py
backend/app/schemas/: auth.py  ingredient.py  product.py  profile.py  reaction.py
backend/app/services/: ai_insights_service.py  ai_vision_service.py  auth_service.py  dashboard_service.py  ingredient_parser.py  pattern_detector.py  payment_service.py  product_service.py  profile_service.py  reaction_service.py  recommendation_service.py  subscription_service.py  sync_service.py
mobile/: .env.example  README.md  app.json  babel.config.js  eas.json  package-lock.json  package.json
mobile/src/: App.tsx
mobile/src/components/: SyncStatusBanner.tsx
mobile/src/db/: index.ts  schema.ts
mobile/src/hooks/: useSyncTriggers.ts
mobile/src/lib/: api.ts  queryClient.ts
(+20 files in other folders)
